Embed YouTube video via iframe

--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <HTML>
     <head>
-
+        <meta charset="UTF-8">
+        <title>Push the Button</title>
+      
+        <!-- Link CSS -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        Hello World! update
-    </body>
+  <img src="photo.jpg" alt="Sample image" width="300">
+
+<iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/GsQXadrmhws?si=0SWUePM8hpjCnGsc"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen>
+  </iframe>
+
+  <button id="helloBtn">Hello World</button>
+
+  <script src="script.js"></script>
+</body>
 </HTML>
